cluster/deprecated/traefik-gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  controllerName: traefik.io/gateway-controller
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: traefik
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        # mode: Passthrough
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ejsadiarin-com-tls-cert # secretName in Certificate (created in certificate-homelab.yaml)
